<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_top" >
        
        <LinearLayout
            android:id="@+id/ll_queryNoticeChassis_return"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

	        <ImageView
	            android:layout_width="66dp"
	            android:layout_height="35dp"
	            android:layout_marginLeft="10dp"
	            android:layout_gravity="center"
	            android:background="@drawable/dot_arrowl"
	            android:contentDescription="@null" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tv_title"
            style="@style/titleTyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/tv_chassisTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_top"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/table_bg"
            android:orientation="vertical">
            <LinearLayout 
                 android:layout_width="fill_parent"
           		 android:layout_height="60dp" >
                <TextView 
                  	style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_chassisTitle1" />
                <TextView 
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_chassisTitle2" />
                <TextView 
                   style="@style/tv_noticeLVTitle"
                    android:layout_weight="1"
                    android:text="@string/tv_chassisTitle3" />
                
                <TextView 
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="1"
                    android:text="@string/tv_chassisTitle4" />
                <TextView 
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_chassisTitle5" />
                
                <TextView 
                  	style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_chassisTitle6" />
                <TextView 
                   	style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_chassisTitle7" />
            </LinearLayout>
            <View style="@style/tableTopDivide"/>
            <ListView 
                android:id="@+id/lv_chassisData"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                ></ListView>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_queryNoticeChassis_exit"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/light_blue"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/ll_queryNoticeChassis_close"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imgBtn_queryNoticeChassis_close"
                android:layout_width="96dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/return_off"
                android:contentDescription="@null" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>