<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_top" >

        <LinearLayout
            android:id="@+id/ll_queryNoticeInfo_return"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

	        <ImageView
	            android:layout_width="66dp"
	            android:layout_height="35dp"
	            android:layout_marginLeft="10dp"
	            android:layout_gravity="center"
	            android:background="@drawable/dot_arrowl"
	            android:contentDescription="@null" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tv_title"
            style="@style/titleTyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/gonggaoxinxichaxun" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_top"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/table_bg"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/login_selector"
                android:hint="@string/tv_noticeHeadHint"
                android:singleLine="true"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_select"
                    android:gravity="center"
                    android:text="@string/tv_search"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_noticeInfoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="正在查询……"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:visibility="gone" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/table_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp" >

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_noticeHeadTitle1" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="1"
                    android:text="@string/tv_noticeHeadTitle2" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_noticeHeadTitle3" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_noticeHeadTitle4" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="1"
                    android:text="@string/tv_noticeHeadTitle5" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_noticeHeadTitle6" />

                <TextView
                    style="@style/tv_noticeLVTitle"
                    android:layout_weight="2"
                    android:text="@string/tv_noticeHeadTitle7" />
            </LinearLayout>

            <View style="@style/tableTopDivide" />

            <ListView
                android:id="@+id/lv_noticeData"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_queryNoticeInfo_exit"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/light_blue"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/ll_queryNoticeInfo_close"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imgBtn_queryNoticeInfo_close"
                android:layout_width="96dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/return_off"
                android:contentDescription="@null" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>